-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 151001) **
-----------------------------------------------------------------------

About the version numbers... "vX.Y[.Z][devT]" :

  X = major version  - the overall development status
  Y = minor version  - represents a set of planned features (see TODO);
		       an even number means stable while odd marks 
		       development releases
  Z = revision       - small changes to major.minor version (optional)
		
  devT = dev-release - development releases leading to the next stable
		       version

-----------------------------------------------------------------------

Last officially released version is -*> v2.0.3 *-

??102001 (v2.1dev3)
	- added: ecasound-config - --ldflags and --prefix for 
	- added: engine profiling info (printed to stderr)
	- changed: pyecasound - makefile-hack that allows pyecasound
		   to work even though compiled against libecasound 
		   and libkvutils that are not installed to 
		   a directory listed in /etc/ld.so.conf
	- changed: db-subsystem - is put to sleep more 
		   aggressively, which should further decrease 
		   its cpu-load
	- changed: db-subsystem - runs once again under sched_fifo
		   scheduling if -r is enabled
	- fixed: major bugs in interpreting LADSPA plugin 
		 parameter hint flags
14102001 (v2.1dev2)
	- added: ecaplay - -k, -d and -h options, see 'man ecaplay'
	- added: eiam - ai-get-length-samples, ao-get-length-samples,
		 cs-get-length-samples, cs-set-length-samples [smassy]
	- added: support for variable length buffer's for ALSA 0.9
		 output (required by -ei:xx type effects)
	- changed: tuned prefill-parameters for double-buffering
	- changed: when saving chainsetups, if no parameters 
	           are overridden, buffermode definition (-B) is
		   saved instead of individual parameters
	- changed: yet more changes to the multitrack-mode